[project]
name = "gpt-oss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peft>=0.17.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "trl>=0.21.0",
    "wandb>=0.21.1",
    "weave>=0.51.59",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
